--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,7 +4,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./popup.css">
-  <title>GitSup</title>
+  <title>GitSub</title>
   <style>
 
   </style>
