Fix typo in title

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <h1>GitSup</h1>
+  <h1>GitSub</h1>
   <div class="detail">A little better GitHub.</div>
   <div id="container">
     <div class="one-select">
